--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 							<section class="panel spotlight medium right " id="first">
 								<div class="content span-7">
 									<h2 class="major">Our Services</h2>
-									<p class="icon fa-gem"><b>Sofa & Mattress Care - Deep Cleaning (w) Shampoo</b></p>
-									<p class="icon fa-gem"><b>Executive Treatment - Premium Cleaning | Deep Cleaning</b></p>
-									<p class="icon fa-gem"><b>Basic Care - General Cleaning</b></p>
-									<p class="icon fa-gem"><b>Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</b></p>
-									<p class="icon fa-gem"><b>Post Construction Clean Up and Move in Preparation</b></p>
-									<p class="icon fa-gem"><b>Commercial & Work Stations - Cleaning & Sanitation</b></p>
+									<p><span class="icon fa-gem"><b> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</b></span></p>
+									<p><span class="icon fa-gem"><b> Executive Treatment - Premium Cleaning | Deep Cleaning</b></span></p>
+									<p><span class="icon fa-gem"><b> Basic Care - General Cleaning</b></span></p>
+									<p><span class="icon fa-gem"><b> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</b></span></p>
+									<p><span class="icon fa-gem"><b> Post Construction Clean Up and Move in Preparation</b></span></p>
+									<p><span class="icon fa-gem"><b> Commercial & Work Stations - Cleaning & Sanitation</b></span></p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
