--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; DURT (Solutions) Cleaning Services. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
 					</div>
 
