--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Hello, We Are DURT (Solutions) Cleaning Services</h1>
+									<h1 class="major">DURT (Solutions) Cleaning Services</h1>
 									<p>Hello, We are  <strong>DURT (Solutions) Cleaning Services</strong>, An On-Call Cleaning Services Provider for Residential, Commercial and Post Construction. Employing those who lost their jobs due to COVID-19. We provide healthy homes and working environments.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
@@ -63,12 +63,12 @@
 							<section class="panel spotlight medium right " id="first">
 								<div class="content span-7">
 									<h2 class="major">Our Services</h2>
-									<p><span class="icon fa-gem"><b> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</b></span></p>
-									<p><span class="icon fa-gem"><b> Executive Treatment - Premium Cleaning | Deep Cleaning</b></span></p>
-									<p><span class="icon fa-gem"><b> Basic Care - General Cleaning</b></span></p>
-									<p><span class="icon fa-gem"><b> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</b></span></p>
-									<p><span class="icon fa-gem"><b> Post Construction Clean Up and Move in Preparation</b></span></p>
-									<p><span class="icon fa-gem"><b> Commercial & Work Stations - Cleaning & Sanitation</b></span></p>
+									<p><span class="icon fa-gem"> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</span></p>
+									<p><span class="icon fa-gem"> Executive Treatment - Premium Cleaning | Deep Cleaning</span></p>
+									<p><span class="icon fa-gem"> Basic Care - General Cleaning</b></span></p>
+									<p><span class="icon fa-gem"> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</span></p>
+									<p><span class="icon fa-gem"> Post Construction Clean Up and Move in Preparation</span></p>
+									<p><span class="icon fa-gem"> Commercial & Work Stations - Cleaning & Sanitation</span></p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
