--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 							<section class="panel spotlight medium right " id="first">
 								<div class="content span-7">
 									<h2 class="major">Our Services</h2>
-									<h5><span class="icon fa-gem"> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</span></h5>
-									<h5><span class="icon fa-gem"> Executive Treatment - Premium Cleaning | Deep Cleaning</span></h5>
-									<h5><span class="icon fa-gem"> Basic Care - General Cleaning</b></span></h5>
-									<h5><span class="icon fa-gem"> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</span></h5>
-									<h5><span class="icon fa-gem"> Post Construction Clean Up and Move in Preparation</span></h5>
-									<h5><span class="icon fa-gem"> Commercial & Work Stations - Cleaning & Sanitation</span></h5>
+									<p><span class="icon fa-gem"> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</span></p>
+									<p><span class="icon fa-gem"> Executive Treatment - Premium Cleaning | Deep Cleaning</span></p>
+									<p><span class="icon fa-gem"> Basic Care - General Cleaning</b></span></p>
+									<p><span class="icon fa-gem"> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</span></p>
+									<p><span class="icon fa-gem"> Post Construction Clean Up and Move in Preparation</span></p>
+									<p><span class="icon fa-gem"> Commercial & Work Stations - Cleaning & Sanitation</span></p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
