--- a/index.html
+++ b/index.html
@@ -59,36 +59,28 @@
 								</div>
 							</section>
 
-						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right " id="first">
-								<div class="content span-7">
-									<h2 class="major">Our Services</h2>
+						
+
+						<!-- Panel -->
+							<section class="panel color1">
+								<div class="intro joined">
+									<h2 class="major">OUR SERVICES</h2>
 									<p><span class="icon fa-gem"> Sofa & Mattress Care - Deep Cleaning (w) Shampoo</span></p>
 									<p><span class="icon fa-gem"> Executive Treatment - Premium Cleaning | Deep Cleaning</span></p>
 									<p><span class="icon fa-gem"> Basic Care - General Cleaning</b></span></p>
 									<p><span class="icon fa-gem"> Disinfection and Sanitation - Air Cleaning, Sanitation and Fumigation.</span></p>
 									<p><span class="icon fa-gem"> Post Construction Clean Up and Move in Preparation</span></p>
 									<p><span class="icon fa-gem"> Commercial & Work Stations - Cleaning & Sanitation</span></p>
-								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
-								</div>
-							</section>
-
-						<!-- Panel -->
-							<section class="panel color1">
-								<div class="intro joined">
-									<h2 class="major">Amet lorem</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon brands fa-twitter"><span class="label">Lorem</span></span></li>
+										<li><span class="icon brands fa-facebook-f"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon brands fa-google"><span class="label">Dolor</span></span></li>
+										<li><span class="icon brands fa-instagram"><span class="label">Sit</span></span></li>
+										<li><span class="icon brands fa-whatsapp"><span class="label">Amet</span></span></li>
+										<li><span class="icon brands fa-viber"><span class="label">Nullam</span></span></li>
 									</ul>
 								</div>
 							</section>
