--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon brands fa-twitter"><span class="label">Lorem</span></span></li>
+										<li><a href="#"><span class="icon brands fa-twitter"><span class="label">Lorem</span></span></a></li>
 										<li><span class="icon brands fa-facebook-f"><span class="label">Ipsum</span></span></li>
 										<li><span class="icon brands fa-google"><span class="label">Dolor</span></span></li>
 										<li><span class="icon brands fa-instagram"><span class="label">Sit</span></span></li>
@@ -84,6 +84,7 @@
 									</ul>
 								</div>
 							</section>
+
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
