--- a/index.html
+++ b/index.html
@@ -75,22 +75,25 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><a href="#"><span class="icon brands fa-twitter"><span class="label">Lorem</span></span></a></li>
-										<li><span class="icon brands fa-facebook-f"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon brands fa-google"><span class="label">Dolor</span></span></li>
-										<li><span class="icon brands fa-instagram"><span class="label">Sit</span></span></li>
-										<li><span class="icon brands fa-whatsapp"><span class="label">Amet</span></span></li>
-										<li><span class="icon brands fa-viber"><span class="label">Nullam</span></span></li>
+										<li><a href="https://twitter.com/profiledurtsolutions"><span class="icon brands fa-twitter"><span class="label"></span></span></a></li>
+										<li><a href="https://facebook.com/profiledurtsolutions"><span class="icon brands fa-facebook-f"><span class="label"></span></span></a></li>
+										<li><a href="https://g.page/durtsolutions?gm"><span class="icon brands fa-google"><span class="label"></span></span></a></li>
+										<li><a href="https://instagram.com/profiledurtsolutions"><span class="icon brands fa-instagram"><span class="label"></span></span></a></li>
+										<li><a href="http://wa.me/9682011174"><span class="icon brands fa-whatsapp"><span class="label"></span></span></a></li>
+										<li><a href="viber://chat?number=09682011174"><span class="icon brands fa-viber"><span class="label"></span></span></a></li>
 									</ul>
 								</div>
 							</section>
 
 
+
+
+
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major">Our Vision</h2>
+									<p>The dream was simple. Provide Jobs to those who lost them. Lead the change we want to see in the world. A fleet of professional cleaners with passion for bring</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -351,30 +354,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</table>
 										</div>
 									</div>
-									<div class="span-2-25">
-										<h3 class="major">Buttons</h3>
-										<ul class="actions">
-											<li><a href="#" class="button primary color2">Primary</a></li>
-											<li><a href="#" class="button">Default</a></li>
-										</ul>
-										<ul class="actions">
-											<li><a href="#" class="button">Default</a></li>
-											<li><a href="#" class="button large">Large</a></li>
-											<li><a href="#" class="button small">Small</a></li>
-										</ul>
-										<ul class="actions">
-											<li><a href="#" class="button primary color2 icon solid fa-cog">Icon</a></li>
-											<li><a href="#" class="button icon fa-gem">Icon</a></li>
-										</ul>
-										<ul class="actions">
-											<li><span class="button primary color2 disabled">Disabled</span></li>
-											<li><span class="button disabled">Disabled</span></li>
-										</ul>
-										<ul class="actions">
-											<li><a href="#" class="button primary color2 circle icon solid fa-cog">Icon</a></li>
-											<li><a href="#" class="button circle icon fa-gem">Icon</a></li>
-										</ul>
-									</div>
+								
 									<div class="span-4-5">
 										<h3 class="major">Form</h3>
 										<form method="post" action="#">
