--- a/index.html
+++ b/index.html
@@ -354,7 +354,30 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</table>
 										</div>
 									</div>
-								
+									<div class="span-2-25">
+										<h3 class="major">Buttons</h3>
+										<ul class="actions">
+											<li><a href="#" class="button primary color2">Primary</a></li>
+											<li><a href="#" class="button">Default</a></li>
+										</ul>
+										<ul class="actions">
+											<li><a href="#" class="button">Default</a></li>
+											<li><a href="#" class="button large">Large</a></li>
+											<li><a href="#" class="button small">Small</a></li>
+										</ul>
+										<ul class="actions">
+											<li><a href="#" class="button primary color2 icon solid fa-cog">Icon</a></li>
+											<li><a href="#" class="button icon fa-gem">Icon</a></li>
+										</ul>
+										<ul class="actions">
+											<li><span class="button primary color2 disabled">Disabled</span></li>
+											<li><span class="button disabled">Disabled</span></li>
+										</ul>
+										<ul class="actions">
+											<li><a href="#" class="button primary color2 circle icon solid fa-cog">Icon</a></li>
+											<li><a href="#" class="button circle icon fa-gem">Icon</a></li>
+										</ul>
+									</div>
 									<div class="span-4-5">
 										<h3 class="major">Form</h3>
 										<form method="post" action="#">
@@ -410,7 +433,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</section>
 
 						<!-- Copyright -->
-							<div class="copyright">&copy; DURT (Solutions) Cleaning Services. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+							<div class="copyright">&copy; DURT (Solutions) Cleaning Services: Sponsored By: <a href="https://github.io">Github</a>.</div>
 
 					</div>
 
