--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 													<label for="email">Email</label>
 													<input type="email" name="email" id="email" />
 												</div>
+												<div class="field half">
+													<label for="email">City</label>
+													<input type="text" name="City" id="City" />
+												</div>
+												<div class="field half">
+													<label for="email">Mobile No.</label>
+													<input type="text" name="Mobile" id="Mobile" />
+												</div>
 												<div class="field">
 													<label for="message">Message</label>
 													<textarea name="message" id="message" rows="4"></textarea>
