--- a/index.html
+++ b/index.html
@@ -131,27 +131,19 @@
 								</div>
 								<div class="inner columns divided">
 									<div class="span-3-25">
-										<form method="post" action="post">
+										<form method="post" action="#">
 											<div class="fields">
 												<div class="field third">
 													<label for="demo-name">Name</label>
-													<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+													<input type="text" name="name" id="name" value="" placeholder="Juan Dela Cruz" />
 												</div>
 												<div class="field third">
 													<label for="demo-email">Email</label>
-													<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+													<input type="email" name="email" id="email" value="" placeholder="jdlcruz@gmail.com" />
 												</div>
 												<div class="field third">
-													<label for="demo-category">Category</label>
-													<div class="select-wrapper">
-														<select name="demo-category" id="demo-category">
-															<option value="">-</option>
-															<option value="1">Manufacturing</option>
-															<option value="1">Shipping</option>
-															<option value="1">Administration</option>
-															<option value="1">Human Resources</option>
-														</select>
-													</div>
+													<label for="demo-email">Mobile No.</label>
+													<input type="text" name="phone" id="phone" value="" placeholder="+63 9xx xxx xxxx" />
 												</div>
 												<div class="field third">
 													<input type="radio" id="demo-priority-low" name="demo-priority" class="color2" checked />
@@ -163,16 +155,15 @@
 												</div>
 												<div class="field third">
 													<input type="checkbox" id="demo-human" name="demo-human" class="color2" checked />
-													<label for="demo-human">Not a robot</label>
+													<label for="demo-human">Call Me</label>
 												</div>
 												<div class="field">
 													<label for="demo-message">Message</label>
-													<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="2"></textarea>
+													<textarea name="message" id="message" placeholder="Enter your message" rows="2"></textarea>
 												</div>
 											</div>
 											<ul class="actions">
 												<li><input type="submit" value="Send Message" class="primary color2" /></li>
-												<li><input type="reset" value="Reset" /></li>
 											</ul>
 										</form>
 									</div>
@@ -180,9 +171,6 @@
 $name = $_POST['name'];
 $email = $_POST['email'];
 $phone = $_POST['phone'];
-$call = $_POST['call'];
-$website = $_POST['website'];
-$priority = $_POST['priority'];
 $type = $_POST['type'];
 $message = $_POST['message'];
 $formcontent=" From: $name \n Phone: $phone \n Call Back: $call \n Website: $website \n Priority: $priority \n Type: $type \n Message: $message";
@@ -190,7 +178,7 @@ $recipient = "info.durt@gmail.com";
 $subject = "Contact Form";
 $mailheader = "From: $email \r\n";
 mail($recipient, $subject, $formcontent, $mailheader) or die("Error!");
-echo "Thank You!" . " -" . "<a href='index.html' style='text-decoration:none;color:#ff0099;'> Return Home</a>";
+echo "Thank You!" . " -" . "<a href='/index.html' style='text-decoration:none;color:#ff0099;'> Return Home</a>";
 ?></script>
 								</div>
 							</section>
