--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
             // https://dashboard.emailjs.com/admin/integration
             emailjs.init(user_SmwhwJAqBJAzy4VF2in9k);
         })();
-    </script>  <script type="text/javascript">
+    </script> 
+     
+    <script type="text/javascript">
+(function() {
+emailjs.init("user_SmwhwJAqBJAzy4VF2in9k");
+})();
+</script>
+
+
+	<script type="text/javascript">
         window.onload = function() {
             document.getElementById('contact-form').addEventListener('submit', function(event) {
                 event.preventDefault();
