--- a/index.html
+++ b/index.html
@@ -133,34 +133,35 @@
 									<div class="span-3-25">
 										<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/1FAIpQLSdy2ngdVe_Z3zDfZevSvuQ4I92nh402m80ngaNejiu6L2E5lQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 										
+										
 											<div class="fields">
 												<div class="field third">
 													<label for="demo-name">Name</label>
-													<input type="text" name="name" id="name" value="" placeholder="Juan Dela Cruz" />
+													<input type="text" name="entry.2005620554" id="entry.2005620554" value="" placeholder="Juan Dela Cruz" />
 												</div>
 												<div class="field third">
 													<label for="demo-email">Email</label>
-													<input type="email" name="email" id="email" value="" placeholder="jdlcruz@gmail.com" />
+													<input type="email" name="entry.1045781291" id="entry.1045781291" value="" placeholder="jdlcruz@gmail.com" />
 												</div>
 												<div class="field third">
 													<label for="demo-email">Mobile No.</label>
-													<input type="text" name="phone" id="phone" value="" placeholder="+63 9xx xxx xxxx" />
+													<input type="text" name="entry.1065046570" id="entry.1065046570" value="" placeholder="+63 9xx xxx xxxx" />
 												</div>
 												<div class="field third">
-													<input type="radio" id="demo-priority-low" name="demo-priority" class="color2" checked />
+													<input type="radio" id="entry.1166974658" name="entry.1166974658" class="color2" checked />
 													<label for="demo-priority-low">Low Priority</label>
 												</div>
 												<div class="field third">
-													<input type="radio" id="demo-priority-high" name="demo-priority" class="color2" />
+													<input type="radio" id="entry.1166974658" name="entry.1166974658" class="color2" />
 													<label for="demo-priority-high">High Priority</label>
 												</div>
 												<div class="field third">
-													<input type="checkbox" id="demo-human" name="demo-human" class="color2" checked />
+													<input type="checkbox" id="entry.299944992" name="entry.299944992" class="color2" checked />
 													<label for="demo-human">Call Me</label>
 												</div>
 												<div class="field">
 													<label for="demo-message">Message</label>
-													<textarea name="message" id="message" placeholder="Enter your message" rows="2"></textarea>
+													<textarea name="entry.839337160" id="entry.839337160" placeholder="Enter your message" rows="2"></textarea>
 												</div>
 											</div>
 											<ul class="actions">
