--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 	    <link rel="canonical" href="https://durtsolutions.github.io/" />
 	  <meta property="og:locale" content="en_US" />
 	  <meta property="og:type" content="website" />
+	  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+      <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+	  <link rel="shortcut icon" type="image/ico" href="images/favicon.ico" />
 	  <meta property="og:title" content="DURT (Solutions) Cleaning Services - Cleaning Services" />
 	  <meta property="og:description" content="The #1 trusted cleaning services provider. General Cleaning, Sofa & Mattress Care and Shampoo, Post Construction or Move-In Preparation Cleaning.Book now!" />
 	  <meta property="og:url" content="https://durtsolutions.github.io/" />
