--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Ethereal by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	DURT (Solutions) Cleaning Services 2021.
 -->
 <html>
 	<head>
@@ -178,12 +176,14 @@
 							</section>
 
 						<!-- Panel -->
-							<section class="panel color2-alt">
-								<div class="intro color2">
-									<h2 class="major">Elements</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam. </p>
+							<section class="panel banner right">
+								<div class="content color0 span-3-75">
+									<h2 class="major">Cleaning Is Not Expensive</h2>
+									<p>Cleaning Is Not <strong>Expensive</strong>. Call us and request for a tailor fit services to save more. Avail only for services you need and not the whole 9 yards.A smile from our customer makes our day.</p>
 								</div>
-								
+								<div class="image filtered span-1-75" data-position="25% 25%">
+									<img src="images/pic04.jpg" alt="" />
+								</div>
 							</section>
 
 						<!-- Copyright -->
