--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
          General Cleaning, Deep Cleaning for Sofa, Couches, Mattress and Cushions, Post-Construction, Move-In Preparations and more. #1 Trusted Local Cleaning & Services Provider. ⭐⭐⭐⭐⭐">
 
       <meta name="viewport" content="width=device-width,initial-scale=1">
-      <meta property="og:title" content="DURT (Solutions) Cleaning Services">
+      <meta property="og:title" content="DURT Solutions Cleaning Services">
       <meta property="og:description" content="Cebu&#39;s Cleaning Services Provider.
          General Cleaning, Deep Cleaning for Sofa, Couches, Mattress and Cushions, Post-Construction, Move-In Preparations and more. #1 Trusted Local Cleaning & Services Provider. ⭐⭐⭐⭐⭐">
      <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
