--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
          </div>
       </section>
       
-      <script>window.DORIK_PROJECT_ID = "625e4843180b790011866876";</script>
+      
       <script>(function popupButton() {
          const popupLinks = document.querySelectorAll(`.popup-btn`);
          popupLinks.forEach(element => {
@@ -786,7 +786,7 @@
                    })
       </script>
       <script src="./assets/js/aos.js"></script><script type="text/javascript">
-         window.AOS.init({disable: "mobile"});
+         window.AOS.init({enable: "mobile"});
       </script>
    </body>
    
