--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 	  
 	  
    </head>
-   <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
+    <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
       <section class="dorik-section dorik-section-d3umr4l0  gradient-overlay">
          <div class="">
             <div class="container dorik-row-xp02tva3-wrapper    ">
                <div class="dorik-row-xp02tva3  flex  ">
                   <div class="col-lg-1/3 col-md-1/3 col-xs-1/3 ">
                      <div class="column-inner dorik-column-5gobeh4e  1/3">
-                        <div class="dorik-wrapper dorik-image-2eqvywe6-wrapper "><img src="./images/favicon_s8rli4xz.png" class="dorik-image-2eqvywe6 "></div>
+                        <div class="dorik-wrapper dorik-image-2eqvywe6-wrapper "><img src="./Cleaning Services_files/favicon_s8rli4xz.png" class="dorik-image-2eqvywe6 "></div>
                      </div>
                   </div>
                   <div class="col-lg-2/3 col-md-2/3 col-xs-2/3 ">
@@ -81,7 +81,12 @@
                            <p>#1 Trusted Local Cleaning &amp; Services Provider. ⭐⭐⭐⭐⭐</p>
                         </div>
                         <div class="dorik-button-3s6hb0pj-wrapper  ">
-                           <a class="dorik-btn dorik-button-3s6hb0pj  null" href="tel:+639682011174"><svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone-alt" class="svg-inline--fa fa-phone-alt fa-w-16 fa-fw icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path></svg>+639682011174</a>
+                           <a class="dorik-btn dorik-button-3s6hb0pj  null" href="http://m.me/profiledurtsolutions">
+                              <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone-alt" class="svg-inline--fa fa-phone-alt fa-w-16 fa-fw icon" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                 <path fill="currentColor" d="M497.39 361.8l-112-48a24 24 0 0 0-28 6.9l-49.6 60.6A370.66 370.66 0 0 1 130.6 204.11l60.6-49.6a23.94 23.94 0 0 0 6.9-28l-48-112A24.16 24.16 0 0 0 122.6.61l-104 24A24 24 0 0 0 0 48c0 256.5 207.9 464 464 464a24 24 0 0 0 23.4-18.6l24-104a24.29 24.29 0 0 0-14.01-27.6z"></path>
+                              </svg>
+                              Call Us  +639682011174
+                           </a>
                         </div>
                      </div>
                   </div>
@@ -92,7 +97,7 @@
             </div>
          </div>
       </section>
-      <section class="dorik-section dorik-section-yuuay7x3 ">
+      <section class="dorik-section dorik-section-yuuay7x3 aos-init" data-aos="flip-up">
          <div class="">
             <div class="container dorik-row-58kwdxzx-wrapper    ">
                <div class="dorik-row-58kwdxzx  flex  ">
@@ -205,7 +210,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-1/4 aos-init" data-aos="flip-right" data-aos-duration="100" data-aos-delay="50" data-aos-mirror="true" data-aos-once="false" data-aos-anchor-placement="center-bottom">
+                  <div class="col-lg-1/4 aos-init" data-aos="flip-right" data-aos-duration="300" data-aos-delay="50" data-aos-mirror="true" data-aos-once="false" data-aos-anchor-placement="center-bottom">
                      <div class="column-inner dorik-column-xvideah7  1/4">
                         <div class="dorik-wrapper dorik-heading-xz0x348t-wrapper ">
                            <h3 class="dorik-heading dorik-heading-xz0x348t ">
@@ -512,7 +517,7 @@
          <div class="">
             <div class="container-fluid dorik-row-sb45seuo-wrapper    ">
                <div class="dorik-row-sb45seuo  flex  ">
-                  <div class="col-lg-1/4 ">
+                  <div class="col-lg-1/4 aos-init" data-aos="flip-right" data-aos-duration="300" data-aos-delay="50" data-aos-mirror="true">
                      <div class="column-inner dorik-column-isv1je92  1/4">
                         <div class="dorik-icon-lr8zgrdy-wrapper  ">
                            <span class="dorik-icon dorik-icon-lr8zgrdy  null">
@@ -566,7 +571,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-1/4 ">
+                  <div class="col-lg-1/4 aos-init" data-aos="flip-left" data-aos-duration="300" data-aos-delay="50" data-aos-mirror="true" data-aos-anchor-placement="center-bottom">
                      <div class="column-inner dorik-column-tgc1glbf  1/4">
                         <div class="dorik-icon-cpqjyqem-wrapper  ">
                            <span class="dorik-icon dorik-icon-cpqjyqem  null">
@@ -629,10 +634,10 @@
       <section class="dorik-section dorik-section-6s9b5qj3 ">
          <div class="dorik-section-6s9b5qj3-frame-corner dorik-frame-corner"></div>
          <div class="">
-            <div class="container dorik-row-l7xuwdmg-wrapper    ">
+            <div class="container-fluid dorik-row-l7xuwdmg-wrapper    ">
                <div class="dorik-row-l7xuwdmg  flex  ">
-                  <div class="col-lg-1/2 ">
-                     <div class="column-inner dorik-column-cuxrorfo  1/2">
+                  <div class="col-lg-1/3 ">
+                     <div class="column-inner dorik-column-cuxrorfo  1/3">
                         <div class="dorik-wrapper dorik-heading-e1ds7g44-wrapper ">
                            <h2 class="dorik-heading dorik-heading-e1ds7g44 ">
                               <span>
@@ -645,9 +650,9 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col-lg-1/2 col-md-1/1 ">
-                     <div class="column-inner dorik-column-g3wrxy10  1/2">
-                        <div class="dorik-accordion-h0j8egpn ">
+                  <div class="col-lg-1/3 col-md-1/1 ">
+                     <div class="column-inner dorik-column-z33xygbf  1/3">
+                        <div class="dorik-accordion-gzrpll4p ">
                            <details>
                               <summary>Is it expensive?</summary>
                               <div class="details-content">
@@ -672,6 +677,12 @@
                                  <p>Customer satisfaction is always our end goal. We aim bring smile and make your money worth. We end our cleaning with concurrence from customers that this is done according to customer's expectations.</p>
                               </div>
                            </details>
+                           <details>
+                              <summary>What services do you offer?</summary>
+                              <div class="details-content">
+                                 <p>We offer Sofa and Mattress Care, Disinfection via Fogging or Misting (customer choice), General Cleaning, Move-In preparation or Post Construction.</p>
+                              </div>
+                           </details>
                         </div>
                      </div>
                   </div>
@@ -685,7 +696,7 @@
                <div class="dorik-row-uoe34ckl  flex  ">
                   <div class="col-lg-1/1 ">
                      <div class="column-inner dorik-column-q3a984sg  1/1">
-                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./images/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
+                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./Cleaning Services_files/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
                         <div class="dorik-text dorik-text-qes8uwew ">
                            <p>This site is designed for mobile devices. Making it light and fast.  If the information you're looking for is not here, Please let us know by leaving us a message. ❤ Copyright 2020, DURT Solutions</p>
                         </div>
@@ -734,8 +745,16 @@
             </div>
          </div>
       </section>
-      
-      
+      <div class="dorik-branding">
+         <span>Built with Dorik</span> 
+         <a href="mailto:abuse@dorik.io?subject=Abuse%20Report%20{WEBSITE_URL}" title="Report Abuse">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="currentColor">
+               <path fill="none" d="M0 0h24v24H0z"></path>
+               <path d="M5 16v6H3V3h9.382a1 1 0 0 1 .894.553L14 5h6a1 1 0 0 1 1 1v11a1 1 0 0 1-1 1h-6.382a1 1 0 0 1-.894-.553L12 16H5zM5 5v9h8.236l1 2H19V7h-6.236l-1-2H5z"></path>
+            </svg>
+         </a>
+      </div>
+      <script>window.DORIK_PROJECT_ID = "625e4843180b790011866876";</script>
       <script>(function popupButton() {
          const popupLinks = document.querySelectorAll(`.popup-btn`);
          popupLinks.forEach(element => {
@@ -789,5 +808,4 @@
          window.AOS.init({enable: "mobile"});
       </script>
    </body>
-   
 </html>
