--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                <div class="dorik-row-uoe34ckl  flex  ">
                   <div class="col-lg-1/1 ">
                      <div class="column-inner dorik-column-q3a984sg  1/1">
-                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./Cleaning Services_files/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
+                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./assets/images/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
                         <div class="dorik-text dorik-text-qes8uwew ">
                            <p>This site is designed for mobile devices. Making it light and fast.  If the information you're looking for is not here, Please let us know by leaving us a message. ❤ Copyright 2020, DURT Solutions</p>
                         </div>
