--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
          </div>
       </section>
-      <section class="dorik-section dorik-section-yuuay7x3 aos-init" data-aos="flip-up">
+      <section class="dorik-section dorik-section-yuuay7x3 aos-init">
          <div class="">
             <div class="container dorik-row-58kwdxzx-wrapper    ">
                <div class="dorik-row-58kwdxzx  flex  ">
