--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	  <meta name="twitter:image" content="https://durtsolutions.github.io/twittersocial.png" />
 	  <meta name="twitter:creator" content="@profiledurtsolutions" />
 	  <meta name="twitter:site" content="@profiledurtsolutions" />
-	  
+	  <meta name="google-site-verification" content="8VNkdMsWz13qOPODzhFGy7qdGgqoCJQ7ezT-OZx-Ifc" />
 	  <script type="application/ld+json">
 {
   "@context": "http://schema.org",
