--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 	  <meta name="twitter:image" content="https://durtsolutions.github.io/twittersocial.png" />
 	  <meta name="twitter:creator" content="@profiledurtsolutions" />
 	  <meta name="twitter:site" content="@profiledurtsolutions" />
+	  <meta property="og:type" content="website" />
 	  <meta name="google-site-verification" content="8VNkdMsWz13qOPODzhFGy7qdGgqoCJQ7ezT-OZx-Ifc" />
 	  <script type="application/ld+json">
 {
