--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	  <meta name="twitter:creator" content="@profiledurtsolutions" />
 	  <meta name="twitter:site" content="@profiledurtsolutions" />
 	  <meta property="og:type" content="website" />
+	  <meta property="fb:app_id" content="1158116654610991" />
 	  <meta name="google-site-verification" content="8VNkdMsWz13qOPODzhFGy7qdGgqoCJQ7ezT-OZx-Ifc" />
 	  <script type="application/ld+json">
 {
