--- a/index.html
+++ b/index.html
@@ -2,7 +2,29 @@
 
 <html lang="en">
    <head>
-      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+   
+    <!-- FAVICONS -->
+    <!-- generics -->
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-color-32.png" sizes="32x32">
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-57.png" sizes="57x57">
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-76.png" sizes="76x76">
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-96.png" sizes="96x96">
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-128.png" sizes="128x128">
+    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-228.png" sizes="228x228">
+
+    <!-- Android -->
+    <link rel="shortcut icon" sizes="196x196" href=“assets/favicon.ico">
+
+    <!-- iOS -->
+    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-152.png" sizes="152x152">
+    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-180.png" sizes="180x180">
+   
+   
+   
+   
+     
       <style data-merge-styles="true"></style>
       <title>Cleaning Services</title>
       <meta name="description" content="Cebu&#39;s Cleaning Services Provider.
