--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                      <div class="column-inner dorik-column-q3a984sg  1/1">
                         <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./images/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
                         <div class="dorik-text dorik-text-qes8uwew ">
-                           <p>This site is designed for mobile devices. Making it light and fast.  If the information you're looking for is not here, Please let us know by leaving us a message. ❤ Copyright 2020, DURT Solutions</p>
+                           <p>This site is designed for mobile devices. Making it light and fast.  If the information you're looking for is not here, Please let us know by leaving us a message. <span style="color: rgb(243,4,4);">❤</span> Copyright 2020, DURT Solutions</p>
                         </div>
                      </div>
                   </div>
