--- a/index.html
+++ b/index.html
@@ -6,20 +6,19 @@
    
     <!-- FAVICONS -->
     <!-- generics -->
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-color-32.png" sizes="32x32">
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-57.png" sizes="57x57">
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-76.png" sizes="76x76">
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-96.png" sizes="96x96">
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-128.png" sizes="128x128">
-    <link rel="icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-228.png" sizes="228x228">
+    <link rel="icon" href="./images/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" href="./images/favicon-57x57.png" sizes="57x57">
+    <link rel="icon" href="./images/favicon-76x76.png" sizes="76x76">
+    <link rel="icon" href="./images/favicon-96x96.png" sizes="96x96">
+    
 
     <!-- Android -->
-    <link rel="shortcut icon" sizes="196x196" href=“assets/favicon.ico">
+    <link rel="shortcut icon" sizes="196x196" href=“./images/favicon-196x196.png">
 
     <!-- iOS -->
-    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-120.png" sizes="120x120">
-    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-152.png" sizes="152x152">
-    <link rel="apple-touch-icon" href="https://storage.googleapis.com/zipbooks-resources/icons/icon-purple-180.png" sizes="180x180">
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon-120x120.png" sizes="120x120">
+    <link rel="apple-touch-icon" href="./images/apple-touch-icon-152x152.png" sizes="152x152">
+    
    
    
    
@@ -729,6 +728,12 @@
                               <summary>What services do you offer?</summary>
                               <div class="details-content">
                                  <p>We offer Sofa and Mattress Care, Disinfection via Fogging or Misting (customer choice), General Cleaning, Move-In preparation or Post Construction.</p>
+                              </div>
+                           </details>
+						   <details>
+                              <summary>What type of spaces do you clean?</summary>
+                              <div class="details-content">
+                                 <p>We clean residentials spaces, Condo, Boarding House, Rooms, Hotels, Commercial</p>
                               </div>
                            </details>
                         </div>
