--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   "name": "Cebu's Cleaning Services Provider & More.",
   "description": "General Cleaning, Deep Cleaning for Sofa, Couches, Mattress and Cushions, Post-Construction, Move-In Preparations and more. #1 Trusted Local Cleaning & Services Provider. ⭐⭐⭐⭐⭐",
   "url": "https://durtsolutions.com",
-  "image": "./images/favicon_gijv2hfj.png",
+  "image": "https://durtsolutions.com/images/favicon_gijv2hfj.png",
   "keywords": "Cleaning, General Cleaning, Disinfection, Deep Cleaning, DURT Solutions"
 }</script>
 <style>body {background: white; }</style>
@@ -53,7 +53,7 @@
    "@context":"http://schema.org",
    "@type":"Organization",
    "name":"DURT Solutions",
-   "logo":"./images/favicon_gijv2hfj.png",
+   "logo":"https://durtsolutions.com/images/favicon_gijv2hfj.png",
    "url":"https://durtsolutions.com",
    "sameAs":[  
        "https://www.facebook.com/profiledurtsolutions",
@@ -64,7 +64,7 @@
       "@type":"Organization",
       "name":"DURT Solutions",
       "description":"Bubble introduces a new way to build a web application. It’s a no-code tool that lets you build SaaS platforms, marketplaces and CRMs without code. Bubble hosts all applications on its cloud platform.",
-      "logo":"./images/favicon_gijv2hfj.png",
+      "logo":"https://durtsolutions.com/images/favicon_gijv2hfj.png",
       "sameAs":[  
        "https://www.facebook.com/profiledurtsolutions",
        "https://twitter.com/SolutionsDurt",
