--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <div class="dorik-row-xp02tva3  flex  ">
                   <div class="col-lg-1/3 col-md-1/3 col-xs-1/3 ">
                      <div class="column-inner dorik-column-5gobeh4e  1/3">
-                        <div class="dorik-wrapper dorik-image-2eqvywe6-wrapper "><img src="./images/favicon_s8rli4xz.png" class="dorik-image-2eqvywe6 "></div>
+                        <div class="dorik-wrapper dorik-image-2eqvywe6-wrapper "><img src="./images/favicon_s8rli4xz.png" width="70" height="70" class="dorik-image-2eqvywe6 "></div>
                      </div>
                   </div>
                   <div class="col-lg-2/3 col-md-2/3 col-xs-2/3 ">
@@ -737,7 +737,7 @@
                <div class="dorik-row-uoe34ckl  flex  ">
                   <div class="col-lg-1/1 ">
                      <div class="column-inner dorik-column-q3a984sg  1/1">
-                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./images/favicon_gijv2hfj.png" class="dorik-image-cqyjbgqj "></div>
+                        <div class="dorik-wrapper dorik-image-cqyjbgqj-wrapper "><img src="./images/favicon_gijv2hfj.png" width="70" height="70" class="dorik-image-cqyjbgqj "></div>
                         <div class="dorik-text dorik-text-qes8uwew ">
                            <p>This site is designed for mobile devices. Making it light and fast.  If the information you're looking for is not here, Please let us know by leaving us a message. <span style="color: rgb(243,4,4);">❤</span> Copyright 2020, DURT Solutions</p>
                         </div>
