--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
    <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   
+	<link rel="preconnect" href="https://durtsolutions.com" crossorigin>
+    <link rel="dns-prefetch" href="https://durtsolutions.com">
     <!-- FAVICONS -->
     <!-- generics -->
     <link rel="icon" href="./images/favicon-32x32.png" sizes="32x32">
@@ -128,8 +129,6 @@
             </div>
          </div>
       </section>
-	  
-	  
 	  <link rel="preload" href="./assets/css/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
       <noscript><link rel="stylesheet" href="./assets/css/index.css"></noscript>
 	  <link href="./assets/css/main.css" rel="stylesheet">
